# BlogCode

Linux文件IO/: fgetc与fputc.c  perror的使用.c  strerror的使用.c  查看缓冲区大小.c  标准输入流.c  标准输出流.c
Linux进程/: execlp函数.c  execl函数.c  execv函数.c  fock函数.c  fock函数复杂版.c  wait函数.c  僵尸进程.c  创建守护进程.c  孤儿进程.c  获取PID.c  进程的状态1.c  进程的状态2.c
QtMqtt示例代码/untitled4/: mainwindow.cpp  mainwindow.h  mainwindow.ui  untitled4.pro
linux线程/: 在栈上分配空间.c  线程的分离.c  线程的创建.c  线程的退出.c  阻塞等待线程结束.c
mqttClient/: CMakeLists.txt
mqttClient/Sources/: main.cpp  mainwindow.cpp
mqttClient/Sources/Forms/: mainwindow.ui
mqttClient/Sources/Headers/: mainwindow.h
